//
// Note this a generic sample for codogeneration
//

syntax = "proto3";


message TSampleProto {

    // Comments can be added into generated files from proto file
    bool BoolValue = 1;

    int32 Int32Value = 2;

    string StringValue = 3;

    float FloatValue = 4;

    double DoubleValue = 5;

    enum ESample {
        ESAMPLE1 = 0;
        ESAMPLE2 = 1;
        ESAMPLE3 = 2;
    }
    ESample EnumValue = 6;

    optional int32 IntOptional = 7;

    repeated string StringRepeated = 8;

    message TNestedClass {
        bool BoolNestedValue = 1;
    }
    TNestedClass SubclassValue = 9;

    oneof OneofValueContainer {
        string OneofString = 10;
        int32 OneofInt32 = 11;
    }
}
